# BSAEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  TODO.md  Yeni Metin Belgesi.txt  imgui.ini
.claude/: settings.local.json
BSAEngine-ScriptCore/: BSA-ScriptCore.csproj
BSAEngine-ScriptCore/Source/BSAEngine/: Entity.cs  Input.cs  InternalCalls.cs  Vector3.cs
BSAEngine-ScriptCore/Source/Sandbox/: Player.cs
include/BSAEngine/Asset/: Asset.h  AssetHandle.h  AssetManager.h  AssetMetadata.h
include/BSAEngine/Core/: Application.h  EditorLayer.h  EntryPoint.h  Input.h  InputMapping.h  KeyCodes.h  Layer.h  LayerStack.h  MouseButtonCodes.h  UUID.h  Window.h
include/BSAEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
include/BSAEngine/ImGui/: ImGuiLayer.h
include/BSAEngine/Log/: Log.h
include/BSAEngine/Math/: Math.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
include/BSAEngine/Memory/: Allocator.h  LinearAllocator.h  PoolAllocator.h  StackAllocator.h
include/BSAEngine/Panels/: ContentBrowserPanel.h  SceneHierarchyPanel.h
include/BSAEngine/Renderer/: Buffer.h  EditorCamera.h  Framebuffer.h  GraphicsContext.h  Material.h  OrthographicCamera.h  PerspectiveCamera.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  StaticMesh.h  Texture.h  UniformBuffer.h  VertexArray.h
include/BSAEngine/Scene/: Components.h  Entity.h  PrefabSerializer.h  Scene.h  SceneSerializer.h  ScriptableEntity.h
include/BSAEngine/Scripting/: ScriptEngine.h
src/: main.cpp
src/Asset/: Asset.cpp  AssetManager.cpp
src/Core/: Application.cpp  EditorLayer.cpp  InputMapping.cpp  Layer.cpp  LayerStack.cpp  UUID.cpp
src/ImGui/: ImGuiLayer.cpp
src/Log/: Log.cpp
src/Memory/: LinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
src/Panels/: ContentBrowserPanel.cpp  SceneHierarchyPanel.cpp
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Platform/Windows/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
src/Renderer/: Buffer.cpp  EditorCamera.cpp  Framebuffer.cpp  Material.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  StaticMesh.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
src/Scene/: Entity.cpp  PrefabSerializer.cpp  Scene.cpp  SceneSerializer.cpp
src/Scripting/: ScriptEngine.cpp
